Revert "Clear previous Screens + New notes on README"
This reverts commit b4820001203f96ed0a471c76bc22740053c43e32.